--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@0xcert/ethereum-erc721": "^2.2.0",
-    "@truffle/contract": "^4.2.13"
+    "@truffle/contract": "^4.2.13",
+    "truffle-hdwallet-provider": "^1.0.17"
   },
   "devDependencies": {}
 }
