--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "truffle compile",
+    "test": "truffle test --network development",
+    "deploy:teams": "truffle migrate --network teams",
+    "clean": "rm -rf ./build/ && truffle compile"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +19,7 @@
     "@truffle/contract": "^4.2.13",
     "truffle-hdwallet-provider": "^1.0.17"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "source-verify": "github:ethereum/sourcify"
+  }
 }
